// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPlein /> should autofill blank input 1`] = `
.c3 {
  color: #3e486e;
  font-size: 1.8rem;
  font-weight: 600;
}

.c4 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c8 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 5rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: right;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8:invalid {
  border-color: #eb5757;
}

.c8::-webkit-input-placeholder {
  color: #9298af;
}

.c8::-moz-placeholder {
  color: #9298af;
}

.c8:-ms-input-placeholder {
  color: #9298af;
}

.c8::placeholder {
  color: #9298af;
}

.c8:focus {
  border-color: #7994d4;
}

.c8:focus::-webkit-input-placeholder {
  color: transparent;
}

.c8:focus::-moz-placeholder {
  color: transparent;
}

.c8:focus:-ms-input-placeholder {
  color: transparent;
}

.c8:focus::placeholder {
  color: transparent;
}

.c9 {
  position: absolute;
  top: 1rem;
  right: 1rem;
  width: 100%;
  max-width: 3.2rem;
  height: 100%;
  max-height: 3.2rem;
  color: #9298af;
}

.c2 {
  display: block;
  margin: 1rem 0;
  cursor: pointer;
}

.c5 {
  color: #3e486e;
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 0.8rem;
}

.c0 {
  width: 100%;
  text-align: left;
}

.c0 tr > td:nth-child(2) {
  width: 80%;
  text-align: left;
}

.c1 {
  text-align: left;
}

.c6 {
  font-size: 1.4rem;
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c8 {
    padding: 0 1rem;
    padding-right: 5rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
  }

  .c0 tr > td:nth-child(2) {
    width: 60%;
  }
}

<div>
  <table
    class="c0"
  >
    <caption
      class="c1"
    >
      <label
        class="c2"
      >
        <span
          class="c3"
        >
          Salaire mensuel brut
        </span>
        <span
          class="c4"
        >
           (obligatoire)
        </span>
      </label>
      <p
        class="c5"
      >
        Prendre en compte les primes et avantages en nature.
      </p>
    </caption>
    <thead>
      <tr>
        <th
          class="c6"
        >
          Mois
        </th>
        <th
          class="c6"
        >
          Salaire mensuel brut
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <label
            for="salary0"
          >
            janvier
          </label>
        </td>
        <td>
          <span
            class="c7"
          >
            <input
              class="c8"
              id="salary0"
              name="periods[0].salary"
              title="Salaire mensuel brut pour le mois 1 (prendre en compte les primes et avantages en nature)"
              type="number"
              value="2000"
            />
            <div
              class="c9"
            >
              <svg
                aria-hidden="true"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.632 12.392c-.78 0-1.42.232-1.917.697-.493.465-.822 1.168-.988 2.108h3.785v1.279h-3.91l-.016.373v.457l.016.323h3.387v1.27h-3.245c.354 1.727 1.361 2.59 3.021 2.59.791 0 1.602-.171 2.432-.514v1.685c-.725.337-1.569.506-2.531.506-1.334 0-2.419-.365-3.254-1.096-.83-.73-1.373-1.787-1.627-3.17h-1.262v-1.27h1.129l-.017-.308v-.307l.017-.54h-1.13v-1.278h1.246c.21-1.389.739-2.479 1.585-3.27.847-.792 1.94-1.187 3.28-1.187 1.106 0 2.097.243 2.971.73l-.697 1.553c-.852-.421-1.61-.631-2.275-.631z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <label
            for="salary1"
          >
            février
          </label>
        </td>
        <td>
          <span
            class="c7"
          >
            <input
              class="c8"
              id="salary1"
              name="periods[1].salary"
              title="Salaire mensuel brut pour le mois 2 (prendre en compte les primes et avantages en nature)"
              type="number"
              value="2000"
            />
            <div
              class="c9"
            >
              <svg
                aria-hidden="true"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.632 12.392c-.78 0-1.42.232-1.917.697-.493.465-.822 1.168-.988 2.108h3.785v1.279h-3.91l-.016.373v.457l.016.323h3.387v1.27h-3.245c.354 1.727 1.361 2.59 3.021 2.59.791 0 1.602-.171 2.432-.514v1.685c-.725.337-1.569.506-2.531.506-1.334 0-2.419-.365-3.254-1.096-.83-.73-1.373-1.787-1.627-3.17h-1.262v-1.27h1.129l-.017-.308v-.307l.017-.54h-1.13v-1.278h1.246c.21-1.389.739-2.479 1.585-3.27.847-.792 1.94-1.187 3.28-1.187 1.106 0 2.097.243 2.971.73l-.697 1.553c-.852-.421-1.61-.631-2.275-.631z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<SalaireTempsPlein /> should render 1`] = `
.c3 {
  color: #3e486e;
  font-size: 1.8rem;
  font-weight: 600;
}

.c4 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c7 {
  position: relative;
  display: inline-block;
}

.c8 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem;
  padding-right: 5rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  font-style: normal;
  line-height: inherit;
  text-align: right;
  background: #fff;
  border: 1px solid transparent;
  border-color: transparent;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8:invalid {
  border-color: #eb5757;
}

.c8::-webkit-input-placeholder {
  color: #9298af;
}

.c8::-moz-placeholder {
  color: #9298af;
}

.c8:-ms-input-placeholder {
  color: #9298af;
}

.c8::placeholder {
  color: #9298af;
}

.c8:focus {
  border-color: #7994d4;
}

.c8:focus::-webkit-input-placeholder {
  color: transparent;
}

.c8:focus::-moz-placeholder {
  color: transparent;
}

.c8:focus:-ms-input-placeholder {
  color: transparent;
}

.c8:focus::placeholder {
  color: transparent;
}

.c9 {
  position: absolute;
  top: 1rem;
  right: 1rem;
  width: 100%;
  max-width: 3.2rem;
  height: 100%;
  max-height: 3.2rem;
  color: #9298af;
}

.c2 {
  display: block;
  margin: 1rem 0;
  cursor: pointer;
}

.c5 {
  color: #3e486e;
  font-size: 1.4rem;
  font-style: italic;
  margin-top: 0.8rem;
}

.c0 {
  width: 100%;
  text-align: left;
}

.c0 tr > td:nth-child(2) {
  width: 80%;
  text-align: left;
}

.c1 {
  text-align: left;
}

.c6 {
  font-size: 1.4rem;
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c8 {
    padding: 0 1rem;
    padding-right: 5rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
  }

  .c0 tr > td:nth-child(2) {
    width: 60%;
  }
}

<div>
  <table
    class="c0"
  >
    <caption
      class="c1"
    >
      <label
        class="c2"
      >
        <span
          class="c3"
        >
          Salaire mensuel brut
        </span>
        <span
          class="c4"
        >
           (obligatoire)
        </span>
      </label>
      <p
        class="c5"
      >
        Prendre en compte les primes et avantages en nature.
      </p>
    </caption>
    <thead>
      <tr>
        <th
          class="c6"
        >
          Mois
        </th>
        <th
          class="c6"
        >
          Salaire mensuel brut
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <label
            for="salary0"
          >
            janvier
          </label>
        </td>
        <td>
          <span
            class="c7"
          >
            <input
              class="c8"
              id="salary0"
              name="periods[0].salary"
              title="Salaire mensuel brut pour le mois 1 (prendre en compte les primes et avantages en nature)"
              type="number"
              value="2000"
            />
            <div
              class="c9"
            >
              <svg
                aria-hidden="true"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.632 12.392c-.78 0-1.42.232-1.917.697-.493.465-.822 1.168-.988 2.108h3.785v1.279h-3.91l-.016.373v.457l.016.323h3.387v1.27h-3.245c.354 1.727 1.361 2.59 3.021 2.59.791 0 1.602-.171 2.432-.514v1.685c-.725.337-1.569.506-2.531.506-1.334 0-2.419-.365-3.254-1.096-.83-.73-1.373-1.787-1.627-3.17h-1.262v-1.27h1.129l-.017-.308v-.307l.017-.54h-1.13v-1.278h1.246c.21-1.389.739-2.479 1.585-3.27.847-.792 1.94-1.187 3.28-1.187 1.106 0 2.097.243 2.971.73l-.697 1.553c-.852-.421-1.61-.631-2.275-.631z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </span>
        </td>
      </tr>
      <tr>
        <td>
          <label
            for="salary1"
          >
            février
          </label>
        </td>
        <td>
          <span
            class="c7"
          >
            <input
              class="c8"
              id="salary1"
              name="periods[1].salary"
              title="Salaire mensuel brut pour le mois 2 (prendre en compte les primes et avantages en nature)"
              type="number"
              value="1000"
            />
            <div
              class="c9"
            >
              <svg
                aria-hidden="true"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.632 12.392c-.78 0-1.42.232-1.917.697-.493.465-.822 1.168-.988 2.108h3.785v1.279h-3.91l-.016.373v.457l.016.323h3.387v1.27h-3.245c.354 1.727 1.361 2.59 3.021 2.59.791 0 1.602-.171 2.432-.514v1.685c-.725.337-1.569.506-2.531.506-1.334 0-2.419-.365-3.254-1.096-.83-.73-1.373-1.787-1.627-3.17h-1.262v-1.27h1.129l-.017-.308v-.307l.017-.54h-1.13v-1.278h1.246c.21-1.389.739-2.479 1.585-3.27.847-.792 1.94-1.187 3.28-1.187 1.106 0 2.097.243 2.971.73l-.697 1.553c-.852-.421-1.61-.631-2.275-.631z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
